@@ -396,9 +396,13 @@ ospf_zebra_add (struct prefix_ipv4 *p, struct ospf_route *or)
 
           if (IS_DEBUG_OSPF (zebra, ZEBRA_REDISTRIBUTE))
             {
-              zlog_debug ("Zebra: Route add %s/%d nexthop %s",
-                         inet_ntoa (p->prefix),
-                         p->prefixlen, inet_ntoa (path->nexthop));
+	      char buf[2][INET_ADDRSTRLEN];
+	      zlog_debug("Zebra: Route add %s/%d nexthop %s",
+			 inet_ntop(AF_INET, &p->prefix,
+				   buf[0], sizeof(buf[0])),
+			 p->prefixlen,
+			 inet_ntop(AF_INET, &path->nexthop,
+				   buf[1], sizeof(buf[1])));
             }
         }
 
@@ -462,9 +466,12 @@ ospf_zebra_delete (struct prefix_ipv4 *p, struct ospf_route *or)
 
           if (IS_DEBUG_OSPF (zebra, ZEBRA_REDISTRIBUTE) && api.nexthop_num)
             {
-              zlog_debug ("Zebra: Route delete %s/%d nexthop %s",
-                         inet_ntoa (p->prefix),
-                         p->prefixlen, inet_ntoa (**api.nexthop));
+	      char buf[2][INET_ADDRSTRLEN];
+	      zlog_debug("Zebra: Route delete %s/%d nexthop %s",
+			 inet_ntop(AF_INET, &p->prefix, buf[0], sizeof(buf[0])),
+			 p->prefixlen,
+			 inet_ntop(AF_INET, *api.nexthop,
+				   buf[1], sizeof(buf[1])));
             }
           if (IS_DEBUG_OSPF (zebra, ZEBRA_REDISTRIBUTE) && api.ifindex_num)
             {
